# rust-exercises

./: .gitignore  list.drawio
actionkv/: Cargo.toml  makefile
actionkv/deploy/: config.yaml
actionkv/dump/src/: data.rs
actionkv/src/: akv_mem.rs
actionkv/src/cache/: repo.rs
actionkv/src/config/: cc.rs  kafka.rs  mongo.rs
actionkv/src/dao/: app.rs  mod.rs  preprocess.rs
actionkv/src/driver/qdrant/: collection.rs
actionkv/src/endpoint/: collection.rs  mod.rs  points.rs  search.rs  template.rs
actionkv/src/engine/: collection.rs  point.rs  search.rs
actionkv/src/pb/: mod.rs
actionkv/src/pb/engine/: mod.rs  search.rs
actionkv/src/pb/engine/qdrant/: collection.rs
actionkv/src/pb/svr/: bert.rs  error.rs  index.rs  mod.rs  preprocess.rs  server.rs  template.rs
actionkv/src/server/: app.rs  auth.rs  bert.rs  index.rs  mod.rs  server.rs  template.rs
actionkv/src/transport/: http.rs
actionkv/src/transport/middleware/: auth.rs
actionkv/src/utils/: mongo.rs
actionkv/tests/: bars.rs  body.rs  date.rs  template.rs  thread.rs  watch.rs
s1/: Cargo.toml  readme.md
s1/actionkv/: Cargo.toml  Dockerfile  makefile  readme.md
s1/actionkv/deploy/: config.yaml
s1/actionkv/dump/: Cargo.toml
s1/actionkv/dump/src/: data.rs  dump.rs  main.rs
s1/actionkv/src/: akv_mem.rs  data.rs  lib.rs  server.rs
s1/actionkv/src/cache/: chan.rs  mod.rs  repo.rs  sync.rs
s1/actionkv/src/config/: cc.rs  configure.rs  kafka.rs  logger.rs  mod.rs  mongo.rs
s1/actionkv/src/dao/: app.rs  base.rs  bert.rs  index.rs  mapping.rs  mod.rs  preprocess.rs  server.rs  setting.rs  settings.rs  template.rs
s1/actionkv/src/driver/qdrant/: collection.rs  points.rs
s1/actionkv/src/endpoint/: app.rs  bert.rs  collection.rs  data.rs  engine.rs  index.rs  mod.rs  points.rs  preprocess.rs  server.rs  template.rs
s1/actionkv/src/engine/: collection.rs  mod.rs  point.rs  recommend.rs  search.rs
s1/actionkv/src/engine/qdrant/: collection.rs  index.rs  mod.rs  points.rs
s1/actionkv/src/engine/search/: collection.rs
s1/actionkv/src/middleware/: auth.rs
s1/actionkv/src/pb/: app.rs  entity.rs  error.rs  mod.rs
s1/actionkv/src/pb/engine/: data.rs  mod.rs  search.rs
s1/actionkv/src/pb/engine/qdrant/: collection.rs  mod.rs  points.rs
s1/actionkv/src/pb/svr/: app.rs  bert.rs  data.rs  error.rs  index.rs  mapping.rs  mod.rs  preprocess.rs  server.rs  template.rs
s1/actionkv/src/qdrant/: collection.rs  mod.rs
s1/actionkv/src/search/: mod.rs
s1/actionkv/src/server/: app.rs  auth.rs  bert.rs  index.rs  mod.rs  preprocess.rs  server.rs  template.rs
s1/actionkv/src/service/: app.rs  auth.rs
s1/actionkv/src/transport/: http.rs
s1/actionkv/src/transport/middleware/: auth.rs
s1/actionkv/src/utils/: bson_time.rs  decrypt.rs  mod.rs  mongo.rs
s1/actionkv/src/vdb/qdrant/: collection.rs  index.rs  mod.rs  points.rs
s1/actionkv/tests/: bars.rs  body.rs  borrow.rs  date.rs  decrypt.rs  decrypt2.rs  lock.rs  process.rs  template.rs  thread.rs
s1/async-chat/: .rustc_info.json  Cargo.toml
s1/async-chat/src/: lib.rs
s1/async-chat/src/cmd/client/: main.rs
s1/async-chat/src/cmd/server/: main.rs
s1/async-chat/src/core/: command.rs  connection.rs  group.rs  mod.rs
s1/async-chat/src/pb/: msg.rs
s1/async-chat/src/utils/: err.rs  mod.rs  stream.rs
s1/chapter02/: Cargo.toml
s1/chapter02/src/: arg.rs  main.rs  mod.rs  web.rs
s1/chapter02/src/gcd/: calc.rs
s1/chapter02/src/httpform/: server.rs
s1/chapter02/src/web/: mod.rs  request.rs  server.rs
s1/closure/src/: fn1.rs  main.rs
s1/list1/src/: main.rs  stack.rs
s1/list2/src/: main.rs  stack.rs
s1/list3/: Cargo.toml
s1/list3/src/: main.rs  stack.rs
s1/list4/: Cargo.toml
s1/list4/src/: main.rs  stack.rs
s1/list5/: Cargo.toml
s1/list5/src/: main.rs  stack.rs  stack2.rs
s1/minigrep/: Cargo.toml
s1/minigrep/src/: config.rs  main.rs  search.rs
s1/practice/src/: bbox.rs  main.rs  result.rs
s1/process/src/: main.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
s1/threadpool/src/: main.rs  pool.rs  worker.rs
web/hello/: Cargo.toml
web/hello/src/: main.rs
web/hello/src/endpoints/: hello.rs  mod.rs  user.rs
web/hello/src/pb/: mod.rs  user.rs
web/hello/src/service/: user.rs
web/hello/src/transport/: route.rs
