workspace = { members = ["dump"] }
[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
crc = "3.2"
clap = { version = "*", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.9.34"
serde_json = "1.0.114"
time = "0.3.36"
bincode = "1.3"
serde_derive = "1.0"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
mongodb = { version = "2.8.2" }
tokio = { version = "1.37.0", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
axum = { version = "0.7.5", features = ["ws", "tracing"] }
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
ctor = "0.2.8"
anyhow = "*"
bson = { version = "2.10.0", features = ["chrono-0_4", "time-0_3"] }
validator = { version = "0.14.0", features = ["derive"] }
axum-valid = "0.18.0"
futures = { version = "0.3", features = ["thread-pool"] }

[lib]
name = "libakv"
path = "src/lib.rs"


[[bin]]
name = "akv"
path = "src/akv_mem.rs"
