[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "chat"
path = "src/lib.rs"

[[bin]]
name="client"
path="src/cmd/client/main.rs"

[[bin]]
name="server"
path="src/cmd/server/main.rs"

