
[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7", features = ["unstable"] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[lib]
name = "chat"       # 为什么不能是async-chat
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/cmd/client/main.rs"

[[bin]]
name = "server"
path = "src/cmd/server/main.rs"
