[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
askama = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
matchit = "*"
rand = "*"
http = "1.0.0"
hyper = "*"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
